plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.12'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'gitp'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

ext {
	set('springShellVersion', "2.1.10")
}

dependencies {
	implementation 'org.springframework.shell:spring-shell-starter'
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.eclipse.jgit:org.eclipse.jgit:5.12.0.202106070339-r'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.shell:spring-shell-core:2.1.0'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.awaitility:awaitility'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.0'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

}

dependencyManagement {
	imports {
		mavenBom "org.springframework.shell:spring-shell-dependencies:${springShellVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs '--illegal-access=permit'
}